#1925 - Fixes so that search input on front page does not "jump" when entering focus state

--- a/wp-content/themes/This-is-Helsingborg/assets/css/src/partials/_hero.scss
+++ b/wp-content/themes/This-is-Helsingborg/assets/css/src/partials/_hero.scss
@@ -118,8 +118,16 @@
     }
 }
 
-.browser-firefox .hero .search input[type="search"] {
+.browser-firefox .hero .search input[type="search"],
+.browser-trident .hero .search input[type="search"],
+.browser-explorer .hero .search input[type="search"]
+ {
     width: 400px;
+}
+
+.browser-trident .hero .form-container,
+.browser-explorer .hero .form-container {
+    width: 480px;
 }
 
 .browser-chrome .hero .search .form-element,
